# Diet-Recommender

./: README.md  nonveg_diet_plan.md  pyproject.toml  veg_diet_plan.md
src/diet_recommender/: crew.py  main.py
src/diet_recommender/config/: agents.yaml  tasks.yaml
