[project]
name = "diet_recommender"
version = "0.1.0"
description = "diet_recommender using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
]

[project.scripts]
diet_recommender = "diet_recommender.main:run"
run_crew = "diet_recommender.main:run"
train = "diet_recommender.main:train"
replay = "diet_recommender.main:replay"
test = "diet_recommender.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
